--- a/Class/readme
+++ b/Class/readme
@@ -11,11 +11,14 @@
     __iter__、__next__、
     _enter__、 __exit__、
     __repr__、__str__、
-    __getitem__
+    __getitem__、__setitem__、__delitem__
     __slots__、__metaclass__、
     __missing__、__reduce__、
     __add__、__sub__、__or__、__and__、
     __reversed__、
+    __len__、__contains__、
+    __eq__、__ne__、__hash__、
+    __prepare__、
 
     等一系列方法熟悉
 
