--- a/Datatypes/7.collections.md
+++ b/Datatypes/7.collections.md
@@ -8,6 +8,15 @@
 5.    defaultdict   带有默认值的字典
 
 
+| 方法 | 描述 |
+| --- | --- |
+| namedtuple()	| factory function for creating tuple subclasses with named fields (生成可以使用名字来访问元素内容的tuple子类)	| 
+| deque	        | list-like container with fast appends and pops on either end	(双端队列，可以快速的从另外一侧追加和推出对象) | 
+| Counter	    | dict subclass for counting hashable objects	(计数器，主要用来计数) | 
+| OrderedDict	| dict subclass that remembers the order entries were added	(有序字典) | 
+| defaultdict	| dict subclass that calls a factory function to supply missing values	(带有默认值的字典) | 
+
+
 # 1. namedtuple 对象
 ```
 from collections import namedtuple
@@ -75,6 +84,21 @@ print(ordered_dict)
 #如果需要进行排序
 ordered_dict = OrderedDict(sorted(ordered_dict.items(), key=lambda t:t[0]))
 print(ordered_dict) # OrderedDict([('a', 1), ('b', 4), ('c', 2), ('d', 3), ('e', 5)])
+
+>>> # regular unsorted dictionary
+>>> d = {'banana': 3, 'apple': 4, 'pear': 1, 'orange': 2}
+
+>>> # dictionary sorted by key
+>>> OrderedDict(sorted(d.items(), key=lambda t: t[0]))
+OrderedDict([('apple', 4), ('banana', 3), ('orange', 2), ('pear', 1)])
+
+>>> # dictionary sorted by value
+>>> OrderedDict(sorted(d.items(), key=lambda t: t[1]))
+OrderedDict([('pear', 1), ('orange', 2), ('banana', 3), ('apple', 4)])
+
+>>> # dictionary sorted by length of the key string
+>>> OrderedDict(sorted(d.items(), key=lambda t: len(t[0])))
+OrderedDict([('pear', 1), ('apple', 4), ('orange', 2), ('banana', 3)])
 ```
 
 # 5. defaultdict 对象
@@ -145,3 +169,56 @@ a[1][2]['test'] = 6
 print a 
 # {1: {2: {'test': 6, 3: 4}, 3: {3: 5}}}
 ```
+
+## Collections Abstract Base Classes¶
+The collections module offers the following ABCs:
+
+| ABC	| Inherits from	 | Abstract Methods	 | Mixin Methods |
+| ---	| ---	 | ---	 | --- |
+| Container | | 	 	__contains__| 	 | 
+| Hashable	| |  	__hash__	|  | 
+| Iterable	| |  	__iter__	 | | 
+| Iterator	| Iterable	| next	| __iter__ | 
+| Sized	 	| | __len__	 | | 
+| Callable	| |  	__call__	| |  
+| Sequence	| Sized, Iterable, Container	| __getitem__, __len__	| __contains__, __iter__, __reversed__, index, and count| 
+| MutableSequence	| Sequence	| __getitem__, __setitem__, __delitem__, __len__, insert	| Inherited Sequence methods and append, reverse, extend, pop, remove, and __iadd__| 
+| Set	| Sized, Iterable, Container	| __contains__, __iter__, __len__	| __le__, __lt__, __eq__, __ne__, __gt__, __ge__, __and__, __or__, __sub__, __xor__, and isdisjoint| 
+| MutableSet	| Set	| __contains__, __iter__, __len__, add, discard	|  Inherited Set methods and clear, pop, remove, __ior__, __iand__, __ixor__, and __isub__| 
+| Mapping	| Sized, Iterable, Container	| __getitem__, __iter__, __len__	| __contains__, keys, items, values, get, __eq__, and __ne__| 
+| MutableMapping	| Mapping| 	__getitem__, __setitem__, __delitem__, __iter__, __len__	| Inherited Mapping methods and pop, popitem, clear, update, and setdefault| 
+| MappingView	| Sized	 	| | __len__ | 
+| ItemsView	| MappingView, Set	 	| | __contains__, __iter__| 
+| KeysView	| MappingView, Set	 | | 	__contains__, __iter__| 
+| ValuesView| 	MappingView	 	| | __contains__, __iter__| | 
+
+class collections.Container
+class collections.Hashable
+class collections.Sized
+class collections.Callable
+ABCs for classes that provide respectively the methods __contains__(), __hash__(), __len__(), and __call__().
+
+class collections.Iterable
+ABC for classes that provide the __iter__() method. See also the definition of iterable.
+
+class collections.Iterator
+ABC for classes that provide the __iter__() and next() methods. See also the definition of iterator.
+
+class collections.Sequence
+class collections.MutableSequence
+ABCs for read-only and mutable sequences.
+
+class collections.Set
+class collections.MutableSet
+ABCs for read-only and mutable sets.
+
+class collections.Mapping
+class collections.MutableMapping
+ABCs for read-only and mutable mappings.
+
+class collections.MappingView
+class collections.ItemsView
+class collections.KeysView
+class collections.ValuesView
+
+- [8.3. collections — High-performance container datatypes](https://docs.python.org/2/library/collections.html#collections.Set)
