django sql_create_model

--- a/Third-Module/django/1.sql_create_model.md
+++ b/Third-Module/django/1.sql_create_model.md
@@ -124,3 +124,6 @@ class ModelMixinTestCase(TestCase):
         with connection.schema_editor() as schema_editor:
             schema_editor.delete_model(self.model)
 ```
+
+iii. 文档
+- [SchemaEditor](http://python.usyiyi.cn/documents/Django111_LTS/ref/schema-editor.html)
