django sql_create_model

--- a/Third-Module/django/1.sql_create_model.md
+++ b/Third-Module/django/1.sql_create_model.md
@@ -50,6 +50,8 @@ model = create_mail_model('20161011')
 model.objects.all()
 ```
 
+- [模式编辑器](http://python.usyiyi.cn/documents/django_182/ref/schema-editor.html)
+
 2. django 1.10/1.11
 i. sql实现
 ```
