--- a/Class/readme
+++ b/Class/readme
@@ -4,23 +4,24 @@
 3. python 迭代器协议
 
 6. python
-    __new__、__init__、__call__、
+    __new__、__init__、__call__、__class__、__dict__、__doc__、__format__、__hash__、__module__
     __get__、__set__、__delete__、
     __getattr__、__setattr__、__delattr__、__getattribute__、
-    __getitem__、
     __iter__、__next__、
     _enter__、 __exit__、
     __repr__、__str__、
     __getitem__、__setitem__、__delitem__
     __slots__、__metaclass__、
-    __missing__、__reduce__、
-    __add__、__sub__、__or__、__and__、
-    __reversed__、
-    __len__、__contains__、
+    __missing__、__reduce__、__nonzero__、__reduce_ex__、
+    __add__、__sub__、__or__、__and__、__bool__、
     __eq__、__ne__、__hash__、
+    __reversed__、
+    __len__、__contains__、__sizeof__、
     __prepare__、
     __deepcopy__、 __copy__、
     __weakref__、
+    __getstate__、__setstate__、
+    __subclasshook__、__weakref__
     等一系列方法熟悉
 
     相关文档
