--- a/Function/1.function.md
+++ b/Function/1.function.md
@@ -5,6 +5,40 @@
 2. 函数参数
 3. 函数返回值
 
+## 作用域
+> 作用域是程序运行时变量可被访问的范围，定义在函数内的变量是局部变量，局部变量的作用范围只能是函数内部范围内，它不能在函数外引用。
+> 定义在模块最外层的变量是全局变量，它是全局范围内可见的，当然在函数里面也可以读取到全局变量的。
+
+```
+LEGB-rule
+在一个Python程序运行中，至少有4个scopes是存在的。
+直接访问一个变量可能在这四个namespace中逐一搜索。
+    Local(innermost)
+        包含局部变量。
+        比如一个函数/方法内部。
+        
+    Enclosing
+        包含了非局部(non-local)也非全局(non-global)的变量。
+        比如两个嵌套函数，内层函数可能搜索外层函数的namespace，但该namespace对内层函数而言既非局部也非全局。 
+        
+    Global(next-to-last)
+        当前脚本的最外层。
+        比如当前模块的全局变量。 
+        
+    Built-in(outtermost)
+        Python __builtin__ 模块。
+        包含了内建的变量/关键字等。 
+
+scope的搜索顺序：
+Local -> Enclosing -> Global -> Built-in
+当有一个变量在 local 域中找不到时，Python会找上一层的作用域，即 enclosing 域（该域不一定存在）。
+enclosing 域还找不到的时候，再往上一层，搜索模块内的 global 域。
+最后，会在 built-in 域中搜索。
+对于最终没有搜索到时，Python会抛出一个 NameError 异常。
+```
+
+
+
 ## 小结
 - 如果函数没有 return 语句，则自动 return None。
 
