--- a/Datatypes/8.itertools.md
+++ b/Datatypes/8.itertools.md
@@ -2,6 +2,7 @@
 
 - Python的内建模块itertools提供了非常有用的用于操作迭代对象的函数。
 - itertools模块包含创建有效迭代器的函数，可以用各种方式对数据进行循环操作，此模块中的所有函数返回的迭代器都可以与for循环语句以及其他包含迭代器（如生成器和生成器表达式）的函数联合使用。
+- [10.1. itertools — 为高效循环创建迭代器的函数](http://python.usyiyi.cn/documents/python_352/library/itertools.html)
 
 1. 无限迭代器（Infinite Iterators）
 
