--- a/Function/5.Closure.md
+++ b/Function/5.Closure.md
@@ -166,24 +166,23 @@ In [3]: print [m(2) for m in multipliers()]
 
 1). 生成闭包函数的时候立即绑定(使用函数形参的默认值):
 ```
-In [5]: def multipliers():
-    return [lambda x, a=i: i* x for i in range(4)]
-       ...: 
+def multipliers():
+    return [lambda x, a=i: a * x for i in range(4)]
 
-In [6]: print [m(2) for m in multipliers()]
-[0, 2, 4, 6]
+print [m(2) for m in multipliers()]
+# [0, 2, 4, 6]
 ```
 > 如以上代码: 生成闭包函数的时候, 可以看到每个闭包函数都有一个带默认值的参数: a=i, 
 > 此时, 解释器会查找i的值, 并将其赋予形参a, 这样在生成闭包函数的外部作用域(即外部循环中), 找到了变量i, 遂将其当前值赋予形参a。
 
 2). 使用functools.partial:
 ```
-In [26]: def multipliers():
-    return [functools.partial(lambda i, x: x * i, i) for i in range(4)]
-    ....: 
+import functools
+def multipliers():
+    return [functools.partial(lambda a, x: x * a, i) for i in range(4)]
 
-In [27]: print [m(2) for m in multipliers()]
-    [0, 2, 4, 6]
+print [m(2) for m in multipliers()]
+# [0, 2, 4, 6]
 ```
 > 如以上代码: 在有可能因为延迟绑定而出问题的时候, 可以通过functools.partial构造偏函数, 使得自由变量优先绑定到闭包函数上。
 
